Fri Jan 23 16:58:28 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkmenu.c (DEFAULT_POPUP_DELAY): Changing to 200 was a
	mistake. Change back to 225.

Thu Jan 22 18:46:05 2004  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.3.2 ===

Thu Jan 22 18:45:26 2004  Owen Taylor  <otaylor@redhat.com>

        * gtk/gtkicontheme.c: Patch from Christian Neumair
	to make warning string more translator friendly.

	* gtk/gtktreemodelfilter.h gtkseparatortoolitem.[ch]
	gtk/gtktoolbar.c: Parameter name fixes to keep gtk-doc
	happy.

	* configure.in: Require GLib-2.3.2, version 2.3.2,
	interface age 0, binary age 302.

	* NEWS: Organized, added some names.

Thu Jan 22 16:59:36 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkliststore.c (gtk_list_store_reorder): Doc fix.

2004-01-22  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkwidget.c (gtk_widget_class_init): Added documentation for
	GtkWidget::popup_menu.

Thu Jan 22 21:45:24 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkmenu.c (gtk_menu_remove): Remove the attach 
	info after calling gtk_menu_do_remove(), since that function
	uses the attach info. Doh!

	* gtk/gtkmenu.c (gtk_menu_do_remove): Don't check priv->columns 
	for being 1 directly after setting it to 0.

Thu Jan 22 21:38:52 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* NEWS: Updates

2004-01-22  Alexander Larsson  <alexl@redhat.com>

	* gdk/x11/gdkwindow-x11.c (WINDOW_IS_TOPLEVEL):
	Fix typo

2004-01-21  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_finalize):
	Free the path fields.

	* gtk/gtkfilesystemmodel.c (gtk_file_system_model_finalize): Free
	the root_path, reported by <scott@asofyet.org>
	(gtk_file_system_model_finalize): Unref the file system.

	* gtk/gtkfilefilter.c (filter_rule_free): default:
	g_assert_not_reached().
	(gtk_file_filter_finalize): Free the filter->name, reported by
	<scott@asofyet.org>
	(gtk_file_filter_finalize): Free the rules list.
